k8s-volume/pvc-template.yml
apiVersion: v1
kind: Pod
metadata:
  name: centos7-templete
  namespace: default
spec:
  containers:
  - name: centos-pvc
    image: 192.168.91.11/woshitiancai/temp_centos7:base
    ports:
    - containerPort: 22
    volumeMounts:            #将pvc(data) 绑定到pod的/mnt目录
    - name: data
      mountPath: /mnt
    securityContext:
      privileged: true
    workingDir: /root
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: data
