k8s-volume/k8s-wwdt-jenkins-rolleupdate-old.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: k8s-cmdb
  namespace: default
  labels:
    k8s-app: k8s-cmdb
spec:
  replicas: 1 
  selector:
    matchLabels:
      k8s-app: k8s-cmdb
  template:
    metadata:
      name: k8s-wwdt
      labels:
        k8s-app: k8s-cmdb
    spec:
      containers:
        - name: k8s-cmdb
          image: 192.168.91.11/k8s-cmdb:v1
          resources: 
            requests:
              cpu: 1
              memory: 2048Mi
            limits:
              cpu: 2
              memory: 4096Mi
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler   
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 5
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1

---
kind: Service
apiVersion: v1
metadata:
  name: k8s-wwdt
  namespace: default
  labels:
    k8s-app: k8s-wwdt
spec:
  ports:
    - name: wwdt-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    k8s-app: k8s-wwdt
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-wwdt
spec:
  rules:
  - host: k8s-wwdt.com
    http:
      paths:
      - backend:
          serviceName: k8s-wwdt
          servicePort: 8080
